@@ -71,14 +71,14 @@ class beamformer_tests(unittest.TestCase):
 		self.assertTrue(azDiff <= 1)
 		self.assertTrue(elDiff <= 1)
 	
-	def test_fftDelayAndSum(self):
-		"""Check that the beamformer.fftDelayAndSum function actually runs"""
+	def test_phaseAndSum(self):
+		"""Check that the beamformer.phaseAndSum function actually runs"""
 		
 		station = stations.lwa1
 		antennas = station.getAntennas()
 		data = numpy.random.rand(3, 1000)
 		
-		beam = beamformer.fftDelayAndSum(antennas[:3], data, azimuth=45.0, elevation=30.0)
+		beam = beamformer.phaseAndSum(antennas[:3], data, azimuth=45.0, elevation=30.0)
 
 class  beamformer_test_suite(unittest.TestSuite):
 	"""A unittest.TestSuite class which contains all of the lsl.sim.vis units 
